# circuits_project

./: .gitignore  CMakeLists.txt  CircuitsProject.pro  README.md  circuits_project.pro  componentgroup.cpp  componentgroup.h  main.cpp  mainwindow.cpp  mainwindow.h  pin.cpp  pin.h  view.cpp  view.h
Backend/: SavedComponents.json  circuit.cpp  circuit.h  circuitcomponent.cpp  circuitcomponent.h  components.cpp  componenttreeitem.cpp  componenttreeitem.h  componenttreemodel.cpp  componenttreemodel.h  gates.cpp  gates.h  interface.h  pinbase.cpp  pinbase.h  pinin.cpp  pinin.h  pinout.cpp  pinout.h  wire.cpp  wire.h
Frontend/: body.cpp  body.h  componentcontainer.cpp  componentcontainer.h  constants.h  graphicscircuitcomponent.cpp  graphicscircuitcomponent.h  graphicscircuitcomponent_copy.cpp  graphicscircuitio.cpp  graphicscircuitio.h  graphicscomponents.cpp  graphicscomponents.h  graphicsgates.cpp  graphicsgates.h  graphicspin.cpp  graphicspin.h  graphicspinbase.cpp  graphicspinbase.h  graphicspinin.cpp  graphicspinin.h  graphicspinout.cpp  graphicspinout.h  graphicswire.cpp  graphicswire.h  main.cpp  mainwindow.cpp  mainwindow.h  pin.cpp  pin.h  scene.cpp  scene.h  types_reference  view.cpp  view.h  wire.cpp  wire.h
